<?xml version="1.0"?>
<package format="3">
  <name>yolo_detector</name>
  <version>0.0.1</version>
  <description>ROS2 package for real-time object detection using YOLO</description>
  <maintainer email="your_email@example.com">your_name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- External Python dependencies -->
  <exec_depend>numpy</exec_depend>
  <exec_depend>ultralytics</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
